# GLShaderDev

./: .gitattributes  .gitignore  BuildOutput.cpp  BuildOutput.h  CMakeLists.txt  CodeEditor.cpp  CodeEditor.h  CodeWidget.cpp  CodeWidget.h  GLShaderDev.cpp  GLShaderDev.h  OpenGLWidget.cpp  OpenGLWidget.h  README.md  ShaderLexer.cpp  ShaderLexer.h  icons.qrc  index.html  main.cpp  params.json
cmake/: FindGLEW.cmake  FindQScintilla.cmake
doc/tex/: .gitignore  GLShaderDev - CDC.tex  GLShaderDev - Fiche Projet.tex
example/: Balls.glsd  Blur.glsd  Clouds.glsd  Flame.glsd  GeometryShader.glsd  Postprocessing.glsd  Suzanne.glsd  TesselationShader.glsd
example/Balls/: balls.frag  balls.vert
example/Blur/: blur.frag  blur.vert
example/Clouds/: clouds.frag  clouds.vert
example/Flame/: flame.frag
example/GeometryShader/: geometry.vert
example/Suzanne/: suzanne.vert
example/TesselationShader/: tesselation.tesc  tesselation.vert
ext/: CMakeLists.txt
ext/QtPropertyBrowser/: CMakeLists.txt
include/gli/core/: addressing.hpp  addressing.inl  image.hpp  image.inl  storage.hpp  storage.inl  texture2d.hpp  texture2d.inl
pkg/arch/: PKGBUILD
rc/shader/: geopassthrough.frag  geopassthrough.geom  light.f.glsl  light.glsd  light.v.glsl
rc/shader/example/: Blur.glsd
rc/shader/example/Balls/: balls.frag  balls.vert
rc/shader/example/Blur/: blur.frag  blur.vert
rc/shader/example/Clouds/: clouds.frag
rc/shader/example/Flame/: flame.frag
rc/shader/example/GeometryShader/: geometry.frag
rc/shader/example/Postprocessing/: post.frag  post.vert
rc/shader/example/Suzanne/: suzanne.frag  suzanne.vert
rc/shader/example/TesselationShader/: tesselation.frag
rc/syntax/: glsl-4-20-compatibility.kw  glsl-4-20-core.kw  glsl-4-30-core.kw  glsl-4-30.kw
rc/texture/: filter_lowres.dds  noise.dds
src/: .gitignore  BuildOutput.cpp  BuildOutput.h  CMakeLists.txt  CodeEditor.cpp  CodeEditor.h  CodeWidget.cpp  CodeWidget.h  GLHeaders.hpp  GLInfo.cpp  GLInfo.h  GLShaderDev.cpp  GLShaderDev.h  Math.hpp  OpenGLWidget.cpp  OpenGLWidget.h  QsciLexerGLSL.cpp  QsciLexerGLSL.h  ShaderInputView.cpp  ShaderLexer.cpp  ShaderStagesView.cpp  ShaderStagesView.h  ShaderVisualizationOptions.cpp  ShaderVisualizationOptions.h  Vector.hpp  main.cpp  resources.qrc
src/Core/: ShaderProject.cpp  ShaderProject.h
src/Core/Xml/: IXmlSerializable.h  XmlConfig.cpp  XmlConfig.h
src/Dialog/: GLInfoDialog.cpp  GLInfoDialog.h  NewFileDialog.cpp  NewFileDialog.h
src/Editor/: CodeEditor.cpp  CodeEditor.h  CodeWidget.cpp  CodeWidget.h  QsciLexerGLSL.cpp  QsciLexerGLSL.h
src/Exceptions/: GlsdException.hpp  ModelLoaderException.hpp  ProjectException.hpp  ShaderInputException.hpp  ShaderObjectException.hpp
src/GL/: GLHeaders.hpp  GLInfo.cpp  GLInfo.h  GLPreviewWidget.cpp  GLPreviewWidget.h  OpenGLWidget.cpp  OpenGLWidget.h  ShaderUtils.cpp  ShaderUtils.h
src/GL/Shader/: ShaderManager.cpp  ShaderManager.h  ShaderObject.cpp  ShaderObject.h  ShaderProgram.cpp  ShaderProgram.h
src/Model/: Model.cpp  Model.h  ModelLoader.cpp  ModelLoader.h
src/Preferences/: PreferenceListItemDelegate.cpp  PreferenceListItemDelegate.h  PreferencesWidget.cpp  PreferencesWidget.h  SettingsList.cpp  SettingsList.h
src/Preferences/Panels/: APreferencePanel.cpp  APreferencePanel.h  ExtensionValidator.cpp  ExtensionValidator.h  GeneralPanel.cpp  GeneralPanel.h  ShaderExtansionsPanel.cpp  ShaderExtansionsPanel.h  ShaderExtensionsPanel.cpp  ShaderExtensionsPanel.h
src/Project/: IInputItemManager.h  IStagesManager.h  ProjectManager.cpp  ProjectManager.h  ShaderProject.cpp  ShaderProject.h
src/Shader/: ShaderManager.cpp  ShaderManager.h  ShaderObject.cpp  ShaderObject.h  ShaderProgram.cpp  ShaderProgram.h
src/ShaderInputView/: ShaderInputDelegate.cpp  ShaderInputDelegate.h  ShaderInputModel.cpp  ShaderInputModel.h  ShaderInputView.cpp  ShaderInputView.h
src/ShaderInputView/InputItem/: AShaderInputItem.cpp  AShaderInputItem.h  FloatInputItem.cpp  FloatInputItem.h  IShaderInputItem.h  ShaderInputFactory.cpp  ShaderInputFactory.h  TextureInputItem.cpp  TextureInputItem.h
src/ShaderInputView/InputWidget/: AInputItemEditorWidget.cpp  AInputItemEditorWidget.h  AShaderInputProperty.cpp  AShaderInputProperty.h  FloatInputProperty.cpp  FloatInputProperty.h  TestWidget.cpp  TestWidget.h
src/ShaderStagesView/: ShaderStagesView.cpp  ShaderStagesView.h  StagesModel.cpp  StagesModel.h
